tidying start buttons and colouring can't start yet status

--- a/app/views/status/tasklist1.html
+++ b/app/views/status/tasklist1.html
@@ -36,7 +36,7 @@
               <a class="task-name"  aria-describedby="application">
                 Application details
               </a>
-               <strong> <a class="button" href="booked.html" role="button" id="start application">Start section </a></strong>
+               <strong style="float: right; margin-right: 0"> <a class="button" href="booked.html" role="button" id="start application">Start section </a></strong>
 
             
           </ul>
@@ -53,7 +53,7 @@
                 Add photo
               </a>
 
-              <strong> <a class="form-hint"  id="start application">Can't start yet </a></strong>
+              <strong strong class="task-completed" style="background-color: #aaa"> <a id="start application">Can't start yet</a></strong>
               
             </li>
 
@@ -75,7 +75,7 @@
               <a class="task-name" aria-describedby="photo">
                 We will tell you which supporting documents you need.  We will accept photographs or scanned copies
               </a>
-              <strong> <a class="form-hint" id="start application">Can't start yet </a></strong>
+              <strong strong class="task-completed" style="background-color: #aaa"> <a id="start application">Can't start yet</a></strong>
               
             </li>
           </ul>
@@ -89,8 +89,7 @@
               <a class="task-name"  aria-describedby="consent">
                 Find out where and when to collect your emergency travel document
               </a>
-        <strong> <a class="form-hint" id="start application">Can't start yet </a></strong>
-
+         <strong strong class="task-completed" style="background-color: #aaa"> <a id="start application">Can't start yet</a></strong>
 
             </li>
           </ul>
