--- a/app/views/status/tasklist2.html
+++ b/app/views/status/tasklist2.html
@@ -51,7 +51,7 @@
                 Add photo
               </a>
 
-              <strong> <a class="button" href="photo1.html" role="button" id="start application">Start </a></strong>
+              <strong style="float: right; margin-right: 0"> <a class="button" href="photo1.html" role="button" id="start application">Start </a></strong>
 
               
             </li>
@@ -90,7 +90,7 @@
               <a class="task-name"  aria-describedby="consent">
                 Find out where and when to collect your emergency travel document
               </a>
-               <strong> <a class="form-hint" id="start application">Can't start yet </a></strong>
+                 <strong strong class="task-completed" style="background-color: #aaa"> <a id="start application">Can't start yet</a></strong>
         
          
 
