--- a/app/views/status/tasklist3.html
+++ b/app/views/status/tasklist3.html
@@ -90,7 +90,7 @@
               <a class="task-name"  aria-describedby="consent">
                 Find out where and when to collect your emergency travel document
               </a>
-              <strong> <a class="button" href="collect.html" role="button" id="start application">Start </a></strong>
+              <strong style="float: right; margin-right: 0"> <a class="button" href="collect.html" role="button" id="start application">Start </a></strong>
         
          
 
