--- a/app/views/status/tasklist5.html
+++ b/app/views/status/tasklist5.html
@@ -96,7 +96,7 @@
             </li>
           </ul>
 
-          <strong> <a class="button" href="done.html" role="button" id="start application">Submit application </a></strong>
+          <strong style="float: right; margin-right: 0"> <a class="button" href="done.html" role="button" id="start application">Submit application </a></strong>
         </li>
       </ol>
 
